[UPDATE] remove file not use

--- a/src/bulk_calculate.ipynb
+++ b/src/bulk_calculate.ipynb
@@ -7,7 +7,7 @@
             "outputs": [],
             "source": [
                 "import spectral.io.envi as envi\n",
-                "from proj.tasks import send_matrix_to_queue_task, read_image_spectral, clf_RF_1, read_col_data_from_file, load_sklearn_model_to_file, get_full_path\n",
+                "from proj.tasks import send_matrix_to_queue_task, read_image_spectral, read_col_data_from_file, load_sklearn_model_to_file, get_full_path\n",
                 "import numpy as np\n",
                 "import pandas as pd\n",
                 "import sqlite3\n",
@@ -358,7 +358,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.5"
+            "version": "3.9.7"
         }
     },
     "nbformat": 4,
